--- a/.prettierrc
+++ b/.prettierrc
@@ -1,7 +1,13 @@
 {
-  "endOfLine": "lf",
-  "semi": false,
-  "singleQuote": false,
+  "parser": "typescript",
+  "printWidth": 80,
   "tabWidth": 2,
-  "trailingComma": "es5"
+  "useTabs": false,
+  "singleQuote": true,
+  "semi": false,
+  "trailingComma": "es5",
+  "bracketSpacing": true,
+  "jsxBracketSameLine": false,
+  "arrowParens": "always",
+  "proseWrap": "preserve"
 }
