--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "gatsby-plugin-offline": "^3.0.32",
     "gatsby-plugin-react-helmet": "^3.1.21",
     "gatsby-plugin-sharp": "^2.4.3",
+    "gatsby-plugin-typescript": "^2.1.27",
     "gatsby-source-filesystem": "^2.1.46",
     "gatsby-transformer-sharp": "^2.3.13",
     "prop-types": "^15.7.2",
@@ -26,7 +27,9 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
-    "prettier": "^1.19.1"
+    "@types/styled-components": "^4.4.2",
+    "prettier": "^1.19.1",
+    "typescript": "^3.7.5"
   },
   "keywords": [
     "gatsby"
