--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
+    "react-icons": "^3.9.0",
     "react-switch": "^5.0.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
