--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
+    "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^4.4.2",
     "prettier": "^1.19.1",
     "typescript": "^3.7.5"
