--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
+    "react-redux": "^7.1.3",
     "react-switch": "^5.0.1",
     "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
