--- a/package.json
+++ b/package.json
@@ -11,7 +11,9 @@
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "start": "gatsby clean && npm run develop",
     "serve": "gatsby serve",
-    "clean": "gatsby clean"
+    "clean": "gatsby clean",
+    "typecheck": "tsc",
+    "ci": "yarn format && yarn typecheck"
   },
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
