--- a/package.json
+++ b/package.json
@@ -6,46 +6,27 @@
   "author": "Sunny Golovine <sunny@glvn.co>",
   "license": "MIT",
   "scripts": {
-    "build": "gatsby build",
-    "develop": "gatsby develop",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
-    "start": "gatsby clean && npm run develop",
-    "serve": "gatsby serve",
-    "clean": "gatsby clean",
     "typecheck": "tsc",
-    "dead-code": "ts-prune",
-    "ci": "yarn format && yarn typecheck",
+    "prune": "ts-prune",
+    "ci": "yarn format && yarn typecheck && yarn prune",
     "prod": "yarn clean && yarn build && yarn serve"
   },
   "dependencies": {
     "@types/react-helmet": "^5.0.15",
     "bootstrap": "^4.4.1",
-    "bootswatch": "^4.4.1",
-    "gatsby": "^2.19.7",
-    "gatsby-image": "^2.2.39",
-    "gatsby-plugin-manifest": "^2.2.39",
-    "gatsby-plugin-offline": "^3.0.32",
-    "gatsby-plugin-react-helmet": "^3.1.22",
-    "gatsby-plugin-sharp": "^2.4.3",
-    "gatsby-plugin-sitemap": "^2.2.27",
-    "gatsby-plugin-typescript": "^2.1.27",
-    "gatsby-source-filesystem": "^2.1.46",
-    "gatsby-transformer-sharp": "^2.3.13",
-    "prop-types": "^15.7.2",
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.0-beta.16",
-    "react-bootstrap-switch": "^15.5.3",
     "react-dom": "^16.12.0",
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
-    "react-switch": "^5.0.1",
-    "reactstrap": "^8.4.1",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
     "@types/styled-components": "^4.4.2",
+    "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
     "ts-prune": "^0.3.0",
     "typescript": "^3.7.5"
