--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
   "author": "Sunny Golovine <sunny@glvn.co>",
   "license": "MIT",
   "scripts": {
+    "dev": "yarn clean && yarn start",
+    "start": "parcel ./src/index.html",
+    "build": "echo 'no build command yet'",
+    "clean": "rm -rf ./cache ./dist",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "typecheck": "tsc",
     "prune": "ts-prune",
-    "ci": "yarn format && yarn typecheck && yarn prune",
-    "prod": "yarn clean && yarn build && yarn serve"
+    "ci": "yarn format && yarn typecheck && yarn prune"
   },
   "dependencies": {
+    "@types/react-dom": "^16.9.5",
     "@types/react-helmet": "^5.0.15",
     "bootstrap": "^4.4.1",
     "react": "^16.12.0",
@@ -21,10 +25,12 @@
     "react-helmet": "^5.2.1",
     "react-icons": "^3.9.0",
     "react-redux": "^7.1.3",
+    "react-router-dom": "^5.1.2",
     "styled-components": "^5.0.1"
   },
   "devDependencies": {
     "@types/react-redux": "^7.1.7",
+    "@types/react-router-dom": "^5.1.3",
     "@types/styled-components": "^4.4.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
