--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   "scripts": {
     "dev": "yarn clean && yarn start",
     "start": "parcel ./src/index.html",
-    "build": "echo 'no build command yet'",
+    "build": "yarn clean && parcel build ./src/index.html --no-source-maps",
+    "serve": "serve -s ./dist",
     "clean": "rm -rf ./cache ./dist",
     "format": "prettier --write \"**/*.{ts,tsx,json,md}\"",
     "typecheck": "tsc",
@@ -34,6 +35,7 @@
     "@types/styled-components": "^4.4.2",
     "parcel-bundler": "^1.12.4",
     "prettier": "^1.19.1",
+    "serve": "^11.3.0",
     "ts-prune": "^0.3.0",
     "typescript": "^3.7.5"
   }
