--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "license": "MIT",
   "scripts": {
     "dev": "yarn clean && yarn start",
-    "start": "parcel ./src/index.html",
+    "start": "parcel ./src/index.html --port 3000",
     "build": "yarn clean && parcel build ./src/index.html --no-source-maps",
     "serve": "serve -s ./dist",
     "clean": "rm -rf ./cache ./dist",
