--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,6 @@
     "noUnusedLocals": true,
     "noUnusedParameters": true
   },
-  "include": ["./src/**/*"],
+  "include": ["./src/**/*", "Typography.tsx"],
   "exclude": ["node_modules"]
 }
