--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
+    "babel-plugin-module-resolver": "^4.0.0",
     "typescript": "^3.8.3"
   }
 }
