--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,13 +3,14 @@
   "compilerOptions": {
     "target": "esnext",
     "module": "esnext",
-    "jsx": "react",
+    "jsx": "preserve",
     "lib": ["esnext", "dom"],
     "noEmit": true,
     "strict": true,
     "baseUrl": "src",
     "paths": {
-      "*": ["./*"]
+      "*": ["./*"],
+      "~/*": ["./*"]
     },
     "allowSyntheticDefaultImports": true,
     "moduleResolution": "node",
@@ -17,8 +18,11 @@
     "esModuleInterop": true,
     "skipLibCheck": true,
     "noUnusedLocals": true,
-    "noUnusedParameters": true
+    "noUnusedParameters": true,
+    "allowJs": true,
+    "forceConsistentCasingInFileNames": true,
+    "isolatedModules": true
   },
-  "include": ["./pages/*.tsx"],
+  "include": ["./pages/*.tsx", "./components/*.tsx"],
   "exclude": ["node_modules"]
 }
