--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
   "scripts": {
     "start": "next",
     "build": "next build",
-    "serve": "next start"
+    "serve": "next start",
+    "format": "prettier --write ./**/*.{ts,tsx,js}",
+    "typecheck": "tsc"
   },
   "dependencies": {
     "next": "^9.3.4",
@@ -19,6 +21,7 @@
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "babel-plugin-module-resolver": "^4.0.0",
+    "prettier": "^2.0.2",
     "typescript": "^3.8.3"
   }
 }
