--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,5 +24,5 @@
     "isolatedModules": true
   },
   "include": ["./**/*.tsx"],
-  "exclude": ["node_modules"]
+  "exclude": ["node_modules", "old_stuff"]
 }
