--- a/package.json
+++ b/package.json
@@ -13,12 +13,14 @@
     "typecheck": "tsc"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sass": "^1.26.3"
   },
   "devDependencies": {
+    "@types/classnames": "^2.2.10",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
     "babel-plugin-module-resolver": "^4.0.0",
