--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build": "next build",
     "serve": "next start",
     "format": "prettier --write ./**/*.{ts,tsx,js}",
+    "lint:css": "stylelint 'styles/**/*.{css,scss,sass}'",
     "typecheck": "tsc"
   },
   "dependencies": {
@@ -25,6 +26,9 @@
     "@types/react": "^16.9.32",
     "babel-plugin-module-resolver": "^4.0.0",
     "prettier": "^2.0.2",
+    "stylelint": "^13.3.0",
+    "stylelint-config-sass-guidelines": "^7.0.0",
+    "stylelint-config-standard": "^20.0.0",
     "typescript": "^3.8.3"
   }
 }
