Change liscense to MIT

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "glvn.co",
-  "license": "ISC",
+  "license": "MIT",
   "author": "Sunny Golovine",
   "version": "1.0.0",
   "description": "My Website",
