--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "start": "next",
     "build": "next build",
     "serve": "next start",
-    "format": "prettier --write ./**/*.{ts,tsx,js}",
+    "format": "prettier --write ./**/*.{ts,tsx}",
+    "lint:js": "eslint ./**/*.{ts,tsx}",
     "lint:css": "stylelint 'styles/**/*.{css,scss,sass}'",
     "typecheck": "tsc",
     "ci": "yarn typecheck && yarn format && yarn lint:css"
@@ -25,7 +26,10 @@
     "@types/classnames": "^2.2.10",
     "@types/node": "^13.11.0",
     "@types/react": "^16.9.32",
+    "@typescript-eslint/eslint-plugin": "^2.26.0",
+    "@typescript-eslint/parser": "^2.26.0",
     "babel-plugin-module-resolver": "^4.0.0",
+    "eslint": "^6.8.0",
     "prettier": "^2.0.2",
     "stylelint": "^13.3.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
