--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "@typescript-eslint/parser": "^2.26.0",
     "babel-plugin-module-resolver": "^4.0.0",
     "eslint": "^6.8.0",
+    "eslint-plugin-react": "^7.19.0",
     "prettier": "^2.0.2",
     "stylelint": "^13.3.0",
     "stylelint-config-sass-guidelines": "^7.0.0",
