--- a/package.json
+++ b/package.json
@@ -18,10 +18,12 @@
     "cleanup": "rm -rf .next node_modules"
   },
   "dependencies": {
+    "@types/react-pdf": "^4.0.3",
     "classnames": "^2.2.6",
     "next": "^9.3.4",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-pdf": "^4.1.0",
     "sass": "^1.26.3"
   },
   "devDependencies": {
