--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@types/react-pdf": "^4.0.3",
     "classnames": "^2.2.6",
     "next": "^9.3.4",
+    "next-images": "^1.4.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-pdf": "^4.1.0",
