--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
   "main": "index.js",
   "scripts": {
     "start": "next",
-    "build": "next build && next export -o public/",
+    "build": "next build && next export -o build/",
     "serve": "next start",
     "format": "prettier --write ./**/*.{ts,tsx}",
     "lint:js": "eslint ./**/*.{ts,tsx}",
